--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -6,11 +6,38 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Lists</ion-title>
     </ion-toolbar>
   </ion-header>
-
+    <ion-list>
+      <ion-item>
+        <ion-label>Groceries</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-textarea></ion-textarea>
+      </ion-item>
+      <ion-item>
+        <ion-label>Activities</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-textarea></ion-textarea>
+      </ion-item>
+      <ion-item>
+        <ion-label>Movie Night Options</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-textarea></ion-textarea>
+      </ion-item>
+      <ion-item>
+        <ion-label>Roomates Ranked</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-textarea></ion-textarea>
+      </ion-item>
+      <ion-button expand="block">Add</ion-button>
+    </ion-list>
 </ion-content>
