Change Page Titles

--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Payments
+      Expenses
     </ion-title>
     
   </ion-toolbar>
@@ -10,7 +10,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Payments</ion-title>
+      <ion-title size="large">Expenses</ion-title>
     </ion-toolbar>
   </ion-header>
 
