--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,12 +3,12 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="cog"></ion-icon>
-      <ion-label>Settings</ion-label>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="reload"></ion-icon>
-      <ion-label>Bills</ion-label>
+      <ion-label>Tasks</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
@@ -18,12 +18,12 @@
 
     <ion-tab-button tab="tab4">
       <ion-icon name="basket"></ion-icon>
-      <ion-label>Lists</ion-label>
+      <ion-label>Scheduling</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
       <ion-icon name="logo-usd"></ion-icon>
-      <ion-label>Payments</ion-label>
+      <ion-label>Expenses</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
