--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -20,53 +20,62 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Bizi</ion-card-subtitle>
+      <ion-card-title>WELCOME HOME</ion-card-title>
+    </ion-card-header>
 
-<ion-card>
-  <ion-card-header>
-    <ion-card-subtitle>Bizi</ion-card-subtitle>
-    <ion-card-title>WELCOME HOME</ion-card-title>
-  </ion-card-header>
+    <ion-card-content>
+    Home is where love resides, memories are created, friends always belong, and laughter never ends
+    </ion-card-content>
+  </ion-card>
 
-  <ion-card-content>
-  Home is where love resides, memories are created, friends always belong, and laughter never ends
-  </ion-card-content>
-</ion-card>
+  <ion-card>
+    <ion-item>
+      <ion-icon name="people-outline" slot="start"></ion-icon>
+      <ion-label>Roommates</ion-label>
+      <ion-button fill="outline" slot="end">View</ion-button>
+    </ion-item>
+    <ion-list>
+      <ion-item>
+        <ion-label>Roomate 1</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Roomate 2</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Roomate 3</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Roomate 4</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Roomate 5</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card>
 
-<ion-card>
-  <ion-item>
-    <ion-icon name="layers-outline" slot="start"></ion-icon>
-    <ion-label>Tasks</ion-label>
-    <ion-button fill="outline" slot="end">View</ion-button>
-  </ion-item>
+  <ion-card>
+    <ion-item>
+      <ion-icon name="layers-outline" slot="start"></ion-icon>
+      <ion-label>Due Today</ion-label>
+      <ion-button fill="outline" slot="end">View</ion-button>
+    </ion-item>
 
-  <ion-card-content>
-    You have 3 incomplete tasks
-  </ion-card-content>
-</ion-card>
+    <ion-list>
+      <ion-item>
+        <ion-label>Chore 1</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Chore 2</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Bill 1</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card>
 
-<ion-card>
-  <ion-item>
-    <ion-icon name="people-outline" slot="start"></ion-icon>
-    <ion-label>Roommates</ion-label>
-    <ion-button fill="outline" slot="end">View</ion-button>
-  </ion-item>
-
-  <ion-card-content>
-    Your household contains 4 people
-  </ion-card-content>
-</ion-card>
-
-<ion-card>
-  <ion-item href="#" class="ion-activated">
-    <ion-icon name="warning" slot="start"></ion-icon>
-    <ion-label>WARNING</ion-label>
-    <ion-button fill="outline" slot="end">View</ion-button>
-  </ion-item>
-
-  <ion-card-content>
-    You have 2 upcoming payments
-  </ion-card-content>
-
-</ion-card>
+  <ion-button (click)="runHttp()">run Http</ion-button>
 
 </ion-content>
