--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -16,10 +16,10 @@
 
   <ion-toolbar>
     <ion-segment value="pending">
-      <ion-segment-button value="pending">
+      <ion-segment-button value="pending" href="/completed-expenses">
         Pending
       </ion-segment-button>
-      <ion-segment-button value="complete">
+      <ion-segment-button value="complete" href="tabs/tab5">
         Complete
       </ion-segment-button>
     </ion-segment>
@@ -100,54 +100,6 @@
 </ion-list>
 
 <!-- Create new payment section -->
-<ion-button expand="block">Create New Payment</ion-button>
-<ion-list>
-  <ion-item>
-    <ion-label>Payment Request Title:</ion-label>
-    <ion-input></ion-input>
-  </ion-item>
-</ion-list>
-<ion-list>
-  <ion-item>
-    <ion-label>Payment Amount: $</ion-label>
-    <ion-input></ion-input>
-  </ion-item>
-</ion-list> 
-<ion-item>
-  <ion-label> Select Payment Date</ion-label>
-  <ion-datetime value="2021-012-06" min="2021" max="2025"
-    [dayShortNames]="customDayShortNames"
-    displayFormat="DDD. MMM DD, YYYY"
-    monthShortNames="Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec"></ion-datetime>
-</ion-item>
-<ion-list>
-  <ion-item>
-    <ion-label>Roommates Included in Transaction:</ion-label>
-  </ion-item>
-</ion-list> 
-
-<ion-list>
-  <ion-item>
-    <ion-label>Fate</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-    <ion-icon name="sad-outline"></ion-icon>
-  </ion-item>
-  <ion-item>
-    <ion-label>Bryson</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-    <ion-icon name="people-circle-outline"></ion-icon>
-  </ion-item>
-  <ion-item>
-    <ion-label>Connor</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-    <ion-icon name="skull-outline"></ion-icon>
-  </ion-item>
-  <ion-item>
-    <ion-label>Austen</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-    <ion-icon name="person-circle-outline"></ion-icon>
-  </ion-item>
-</ion-list>
-<ion-button color="success">CREATE</ion-button>
+<ion-button expand="block" href="/new-request">Create New Payment</ion-button>
 
 </ion-content>
