--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,7 +1,12 @@
 ion-item{
-    --background: #3880ff;
+    --background: #585858;
     --color: #fff;
 }
+
 ion-button{
     --background: #062f77;
+}
+
+.text-center{
+    text-align: center;
 }
