--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -59,8 +59,8 @@
   <ion-card>
     <ion-item>
       <ion-icon name="layers-outline" slot="start"></ion-icon>
-      <ion-label>Due Today</ion-label>
-      <ion-button fill="outline" slot="end">View</ion-button>
+      <ion-label>Coming Up</ion-label>
+      <ion-button fill="outline" slot="end" href="/coming-up">View</ion-button>
     </ion-item>
 
     <ion-list>
