--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,12 +12,12 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
+  --ion-color-secondary: #626566;
+  --ion-color-secondary-rgb: 20, 20, 20;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary-shade: #677a83;
+  --ion-color-secondary-tint: #60696d;
 
   /** tertiary **/
   --ion-color-tertiary: #5260ff;
