--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,39 +1,27 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
+
 </ion-header>
 
-<ion-content color="primary" padding>
-  <form #form="ngForm" (ngSubmit)="login(form)">
-    <ion-grid>
-      <ion-row color="primary" justify-content-center>
-        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-          <div text-center>
-            <h3>Login</h3>
-          </div>
-          <div padding>
-            <ion-item>
-              <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
-            </ion-item>
-          </div>
-          <div padding>
-            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <div text-center>
-          If you don't have an account, please 
-            <a routerLink='/register'>register</a> 
-            first
-        </div>
-    </ion-row>
-    </ion-grid>
-  </form>
+<ion-content class="ion-padding">
+  <div class="title">
+    <h4>Login</h4>
+    <p>Lets get started</p>
+  </div>
+
+  <ion-input placeholder="Username" class="primary-input"></ion-input>
+  <ion-input placeholder="Password" type="password" class="primary-input"></ion-input>
+
+  <div class="ion-margin-top ion-text-right forget">
+    <a>Forgot Password?</a>
+  </div>
+
+  <div class="ion-margin-top">
+    <ion-button expand="block" (click)="login()">LOGIN</ion-button>
+  </div>
+
+  <div class="ion-margin-top ion-text-center">
+    <a (click)="dismiss()">Close</a>
+  </div>
 </ion-content>
 
 
