--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,7 +1,17 @@
-ion-item{
-    --background: #3880ff;
-    --color: #fff;
+.title {
+    margin-bottom: 30px;
 }
-ion-button{
-    --background: #062f77;
+
+.title h4 {
+    color: var(--ion-color-primary);
+}
+
+.title p {
+    margin-top: 0 !important;
+    color: #999999;
+    font-size: small;
+}
+
+.forget a {
+    font-size: small !important;
 }
